# hermes

./: .env.example  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/hermes/: __init__.py  __main__.py  cli.py  config.py  core.py  sandbox.py  tools.py
tests/: test_core.py  test_sandbox.py  test_tools.py
