[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "hermes"
version = "0.1.0"
description = "Multi-Agent SuperAgent — researches, codes, and creates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "MukundaKatta" }]
keywords = ["agents", "multi-agent", "orchestration", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
hermes = "hermes.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 99
